--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,8 @@ coreKtxVersion=1.6.0
 appCompatVersion=1.3.1
 constraintVersion=2.1.0
 materialVersion=1.4.0
+swipeVersion=1.1.0
+koletonVersion=1.0.0-beta01
 retrofitVersion=2.9.0
 okHttpVersion=4.9.0
 serializationVersion=1.2.2
