--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,7 @@ constraintVersion=2.1.0
 materialVersion=1.4.0
 swipeVersion=1.1.0
 skeletonVersion=4.0.0
+flexboxVersion=3.0.0
 retrofitVersion=2.9.0
 okHttpVersion=4.9.0
 serializationVersion=1.2.2
