--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,8 @@ swipeVersion=1.1.0
 skeletonVersion=4.0.0
 flexboxVersion=3.0.0
 retrofitVersion=2.9.0
-okHttpVersion=4.9.0
+okHttpVersion=4.9.1
+ksoapVersion=3.6.4
 serializationVersion=1.2.2
 serializationConverterVersion=0.8.0
 navigationVersion=2.4.0-alpha06
@@ -39,4 +40,4 @@ koinVersion=3.1.2
 leakCanaryVersion=2.7
 timberVersion=4.7.1
 coilVersion=1.3.2
-startupVersion=1.0.0
+startupVersion=1.1.0
